samples/_failures_safe/1761187268_2127e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce679141.c: In function ‘main’:
./samples/SAFE/__tmp_ce679141.c:150: error: expected ‘{’ at end of input
